--- a/Diseño/MediaQuery/tienda.html
+++ b/Diseño/MediaQuery/tienda.html
@@ -7,7 +7,9 @@
     </head>
     <body>
         <header>GAME</header>
-
+        <div class="hero">
+            <span>Con nosotros nunca te aburriras</span>
+        </div>
         <div id="contenedor">
             <nav>
                 <ul>
