--- a/Diseño/Grid/Galeria/tienda.html
+++ b/Diseño/Grid/Galeria/tienda.html
@@ -7,6 +7,17 @@
     </head>
     <body>
         <header>GAME</header>
+        <nav>
+            <ul>
+                <li><a class="active" href="#home">Home</a></li>
+                <li><a href="#news">News</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </nav>
+        <div class="hero">
+       
+        </div>
         <div id="contenedor">
             <div>
                 <img src="ds3.png" alt="juego1">
