--- a/Cliente/JavaScript/Unidad5/Ejercicio1/actividad1.html
+++ b/Cliente/JavaScript/Unidad5/Ejercicio1/actividad1.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Documento sin título</title>
-        <script src="prueba.js"></script>
+        <script src="ud5ej1-3.js"></script>
         <style>
             .marcado{
                 background-color: bisque;
