--- a/Diseño/MediaQuery/tienda.html
+++ b/Diseño/MediaQuery/tienda.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <title>Document</title>
         <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css?family=Amatic+SC&display=swap" rel="stylesheet">
+
     </head>
     <body>
         <header>GAME</header>
@@ -13,42 +15,43 @@
         <div id="contenedor">
             <nav>
                 <ul>
-                    <li><a href="">Home</a></li>
-                    <li><a href="">Videojuegos</a></li>
-                    <li><a href="">Consolas</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a class="active" href="#home">Home</a></li>
+                    <li><a href="#news">News</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="#about">About</a></li>
                 </ul>
             </nav>
-            <div>
-                <img src="ds3.png" alt="juego1">
-                <p>Dark Souls 3</p>
-                <p><button>Comprar</button></p>
-            </div>
-            <div>
-                <img src="game1.png" alt="juego2">
-                <p>Imagina ser Veterinaria</p>
-                <p><button>Comprar</button></p>
-            </div>
-            <div>
-                <img src="lastofus.png" alt="juego2">
-                <p>The Last Of Us</p>
-                <p><button>Comprar</button></p>
-            </div>
-            <div>
-                <img src="re4.png" alt="juego4">
-                <p>Resident Evil 4</p>
-                <p><button>Comprar</button></p>
-            </div>
-
-            <div>
-                <img src="bd3.png" alt="juego5">
-                <p>Bordelands 3</p>
-                <p><button>Comprar</button></p>
-            </div>
-            <div>
-                <img src="tlg.png" alt="juego6">
-                <p>The Last Guardian</p>
-                <p><button>Comprar</button></p>
+            <div id="supergaleria">
+                <div>
+                    <img src="ds3.png" alt="juego1">
+                    <p>Dark Souls 3</p>
+                    <p><button>Comprar</button></p>
+                </div>
+                <div>
+                    <img src="game1.png" alt="juego2">
+                    <p>Imagina ser Veterinaria</p>
+                    <p><button>Comprar</button></p>
+                </div>
+                <div>
+                    <img src="lastofus.png" alt="juego2">
+                    <p>The Last Of Us</p>
+                    <p><button>Comprar</button></p>
+                </div>
+                <div>
+                    <img src="re4.png" alt="juego4">
+                    <p>Resident Evil 4</p>
+                    <p><button>Comprar</button></p>
+                </div>
+                <div>
+                    <img src="bd3.png" alt="juego5">
+                    <p>Bordelands 3</p>
+                    <p><button>Comprar</button></p>
+                </div>
+                <div>
+                    <img src="tlg.png" alt="juego6">
+                    <p>The Last Guardian</p>
+                    <p><button>Comprar</button></p>
+                </div>
             </div>
         </div>
         <footer>
