--- a/Cliente/JavaScript/Unidad9/Ejercicio3/index.html
+++ b/Cliente/JavaScript/Unidad9/Ejercicio3/index.html
@@ -8,6 +8,7 @@
 <style>
 	
 </style>
+<script src="js/actividad3.js"></script>
 </head>
 
 <body class="bg-primary">
@@ -92,10 +93,6 @@
 					<li class="page-item"><a class="page-link" href="#">4</a></li>
 					<li class="page-item"><a class="page-link" href="#">5</a></li>
 					<li class="page-item"><a class="page-link" href="#">6</a></li>
-					<li class="page-item"><a class="page-link" href="#">7</a></li>
-					<li class="page-item"><a class="page-link" href="#">8</a></li>
-					<li class="page-item"><a class="page-link" href="#">9</a></li>
-					<li class="page-item"><a class="page-link" href="#">10</a></li>
 				</ul>
 			</nav>
 		</div>
