TERMINA AC3 U9 JV

--- a/Cliente/JavaScript/Unidad9/Alex3/Alex3-2/index.html
+++ b/Cliente/JavaScript/Unidad9/Alex3/Alex3-2/index.html
@@ -8,7 +8,7 @@
 <style>
 	
 </style>
-<script src="js/actividad3.js"></script>
+<script src="js/actividad3-2.js"></script>
 </head>
 
 <body class="bg-primary">
@@ -84,7 +84,7 @@
 				</div>
 			</div>-->
 		</div>
-		<div class="" id="paginacion">
+<!--		<div class="" id="paginacion">
 			<nav aria-label="Page navigation example">
 				<ul class="pagination pagination-lg justify-content-center mt-3 mb-5 mx-auto">
 					<li class="page-item"><a class="page-link" href="#">1</a></li>
@@ -95,7 +95,7 @@
 					<li class="page-item"><a class="page-link" href="#">6</a></li>
 				</ul>
 			</nav>
-		</div>
+		</div>-->
 	</div>
 
 </body>
