--- a/Diseño/Bootstrap/Ejercicio1/index.html
+++ b/Diseño/Bootstrap/Ejercicio1/index.html
@@ -34,6 +34,8 @@
             }
             .galeria{
                 padding: 1%;
+				text-align:center;
+
             }
             .footer{
                 justify-content: space-around;
@@ -68,34 +70,34 @@
                 </ul>
             </div>
         </nav>
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-4 galeria">
+        <div class="container-fluid ">
+            <div class="row justify-content-center">
+                <div class="col-md-4-offset-md-2 galeria">
                     <img src="ds3.png" alt="dark souls 3">
                     <p>Dark Souls 3</p>
                     <button>Comprar</button>
                 </div>
-                <div class="col-sm-4 galeria">
+                <div class="col-md-4-offset-md-2 galeria">
                     <img src="tlg.png" alt="dark souls 3">
                     <p>The Last Guardian</p>
                     <button>Comprar</button>                
                 </div>  
-                <div class="col-sm-4 galeria">
+                <div class="col-md-4-offset-md-2 galeria">
                     <img src="game1.png" alt="dark souls 3">
                     <p>Imagina ser veterinaria</p>
                     <button>Comprar</button>                
                 </div>  
-                <div class="col-sm-4 galeria">
+                <div class="col-md-4-offset-md-2 galeria">
                     <img src="lastofus.png" alt="dark souls 3">
                     <p>The Last Of Us</p>
                     <button>Comprar</button>               
                 </div>  
-                <div class="col-sm-4 galeria">
+                <div class="col-md-4-offset-md-2 align-center galeria">
                     <img src="re4.png" alt="dark souls 3">
                     <p>Resident Evil 4</p>
                     <button>Comprar</button>                
                 </div>  
-                <div class="col-sm-4 galeria">
+                <div class="col-md-4-offset-md-2 align-center galeria">
                     <img src="bd3.png" alt="dark souls 3">
                     <p>Bordelands 3</p>
                     <button>Comprar</button>                
