--- a/Diseño/Bootstrap/Ejercicio1/index.html
+++ b/Diseño/Bootstrap/Ejercicio1/index.html
@@ -92,12 +92,12 @@
                     <p>The Last Of Us</p>
                     <button>Comprar</button>               
                 </div>  
-                <div class="col-md-4-offset-md-2 align-center galeria">
+                <div class="col-md-4-offset-md-2  galeria">
                     <img src="re4.png" alt="dark souls 3">
                     <p>Resident Evil 4</p>
                     <button>Comprar</button>                
                 </div>  
-                <div class="col-md-4-offset-md-2 align-center galeria">
+                <div class="col-md-4-offset-md-2 galeria">
                     <img src="bd3.png" alt="dark souls 3">
                     <p>Bordelands 3</p>
                     <button>Comprar</button>                
