--- a/Diseño/Bootstrap/Ejercicio3/index.html
+++ b/Diseño/Bootstrap/Ejercicio3/index.html
@@ -28,9 +28,9 @@
         
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Navbar</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation-sm">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
@@ -49,27 +49,6 @@
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Features</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="#">Pricing</a>
                     </li>
                 </ul>
             </div>
