--- a/Cliente/JavaScript/Unidad10/Ejercicio6/ahorcado/elahorcado.html
+++ b/Cliente/JavaScript/Unidad10/Ejercicio6/ahorcado/elahorcado.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>El ahoracado</title>
-	<link rel="stylesheet" href="css/estilo.css">
+	<link rel="stylesheet" href="css/estilo.css">	
 </head>
 
 <body>
@@ -36,29 +36,14 @@
 		<div class="centrado" id="partida">
 			<img src="img/1.png" alt="ahorcado">
 		</div>
-		<div class="centrado" id="abecedario">
-			<!--  TODO: 	Eliminar esta tabla y crearla con una consulta AJAX a la BBDD -->
-			<!--  				La tabla debe ser de 5x6								  -->
-			<table>
-				<tr>
-					<td>a</td><td>b</td><td>c</td><td>d</td><td>e</td>
-				</tr>
-				<tr>
-					<td>f</td><td>g</td><td>h</td><td>i</td><td>j</td>
-				</tr>
-				<tr>
-					<td>k</td><td>l</td><td>m</td><td>n</td><td>ñ</td>
-				</tr>
-				<tr>
-					<td>o</td><td>p</td><td>q</td><td>r</td><td>s</td>
-				</tr>
-				<tr>
-					<td>t</td><td>u</td><td>v</td><td>w</td><td>x</td>
-				</tr>
-				<tr>
-					<td>y</td><td>z</td><td colspan="3"></td>
-				</tr>
-			</table>
+		<div id="abecedario">
+			<div id="panelLetras" class="grid-abecedario">
+				<!--  TODO: 	Eliminar estos div y añadirlos con una consulta AJAX a la BBDD -->
+				<div class="grid-letra">a</div><div class="grid-letra">b</div><div class="grid-letra">c</div><div class="grid-letra">d</div><div class="grid-letra">e</div><div class="grid-letra">f</div><div class="grid-letra">g</div><div class="grid-letra">h</div><div class="grid-letra">i</div><div class="grid-letra">j</div><div class="grid-letra">k</div><div class="grid-letra">l</div><div class="grid-letra">m</div><div class="grid-letra">n</div><div class="grid-letra">ñ</div><div class="grid-letra">o</div><div class="grid-letra">p</div><div class="grid-letra">q</div><div class="grid-letra">r</div><div class="grid-letra">s</div><div class="grid-letra">t</div><div class="grid-letra">u</div><div class="grid-letra">v</div><div class="grid-letra">w</div><div class="grid-letra">x</div><div class="grid-letra">y</div><div class="grid-letra">z</div>
+			</div>
+			<div id="letraSeleccionada">
+				
+			</div>
 		</div>
 		<div class="centrado" id="letras">
 			<form action="#" id="laPalabra">
@@ -69,21 +54,14 @@
 			<table id="palabra">
 				<tr id="filaLetras">
 					<!--  TODO: 	Eliminar esta fila y crearla con una consulta AJAX a la BBDD -->
-					<td>a</td>
-					<td>h</td>
-					<td>o</td>
-					<td>r</td>
-					<td>c</td>
-					<td>a</td>
-					<td>d</td>
-					<td>o</td>
+					<td>a</td><td>h</td><td>o</td><td>r</td><td>c</td><td>a</td><td>d</td><td>o</td>
 				</tr>
 			</table>
 		</div>
 		<div class="" id="footer">
 			<div id="infoCurso">Desarrollo Web en Entorno Cliente 2019-20</div>
 			<div id="autor">
-				<!--  Pon aquí tu nombre  -->
+				<!--  TODO: Pon en este div tu nombre  -->
 			</div>
 		</div>
 	</div>
