--- a/Cliente/JavaScript/Unidad10/Ejercicio6/elahorcado.html
+++ b/Cliente/JavaScript/Unidad10/Ejercicio6/elahorcado.html
@@ -21,7 +21,7 @@
                     <button id="manual">Introduce palabra</button>
                     <button id="bbdd">Cargar de la base de datos</button>
                     <div id="extra">
-                        <form action="#" id="opciones">
+                        <form action="palabra" id="opciones">
                             fácil:<input type="radio" name="dificultad" value="0" class="dificultad">
                             normal:<input type="radio" name="dificultad" value="1" class="dificultad" checked>
                             difícil:<input type="radio" name="dificultad" value="2" class="dificultad">
@@ -67,7 +67,7 @@
             <div class="" id="footer">
                 <div id="infoCurso">Desarrollo Web en Entorno Cliente 2019-20</div>
                 <div id="autor">
-                    <!--  TODO: Pon en este div tu nombre  -->
+                    Alejandro Salcedo Santamaria
                 </div>
             </div>
         </div>
