--- a/Cliente/concesionario/Ejercicio3/index.html
+++ b/Cliente/concesionario/Ejercicio3/index.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div class="container-fluid ">
-            <div class="row justify-content-center "> 
+            <div class="row"> 
        
             </div>
         </div>
