--- a/Cliente/JavaScript/Unidad7/Waypoint/Actividad2-ej2.html
+++ b/Cliente/JavaScript/Unidad7/Waypoint/Actividad2-ej2.html
@@ -4,8 +4,9 @@
 <meta charset="utf-8">
 <title>Documento sin título</title>
 <script src="personajes.js"></script>
+<script src="ud7ej3.js"></script>
 
-<script>
+<!--<script>
 document.addEventListener("DOMContentLoaded", function() {
 	
 	personajes = JSON.parse(personajes);
@@ -17,7 +18,7 @@ document.addEventListener("DOMContentLoaded", function() {
 });
 	
 	
-</script>
+</script>-->
 
 <style>
 	body{
